<resources>
    <string name="app_name" translatable="false">PetLand</string>
    <string name="passwordsDontMatch">Passwords don\'t match</string>
    <string name="passwordChanged">Password updated correctly</string>
    <string name="userNotLogged">Active user session isn\'t present</string>
    <string name="profileEditedCorrectly">Profile updated correctly</string>
    <string name="loggedOut">Correctly logged out</string>
    <string name="usernameNeeded">Username needed</string>
    <string name="passwordNeeded">Password needed</string>
    <string name="emailNeeded">Email needed</string>
    <string name="nameNeeded">Name needed</string>
    <string name="birthdayNeeded">Birthday needed</string>
    <string name="confirmPassword">Confirm password</string>
    <string name="password">Password</string>
    <string name="savePassword">Save password</string>
    <string name="goBack">Return</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="birthday">Birthday</string>
    <string name="saveChanges">Save changes</string>
    <string name="changePassword">Change password</string>
    <string name="registerInPetland">Sign up in Petland</string>
    <string name="alreadyRegistered">I already registered</string>
    <string name="welcome">Welcome to Petland</string>
    <string name="welcomeDescription">The best pet app created by pet lovers</string>
    <string name="editProfile">Edit profile</string>
    <string name="logout">Log out</string>
    <string name="createPet">Add pet</string>
    <string name="petList">My pets</string>
    <string name="signIn">Sign in</string>
    <string name="signUp">Sign up</string>
    <string name="continueNext">Continue</string>
    <string name="createAccount">Create account</string>
    <string name="writePetName">Write your pet\'s name</string>
    <string name="accountSettings">Account settings</string>
    <string name="myProfile">My Profile</string>
    <string name="myPet">My Pet</string>
    <string name="walk">Walks</string>
    <string name="map">Map</string>
    <string name="health">Health</string>
    <string name="events">Events</string>
    <string name="add">Add</string>
    <string name="dosPuntos" translatable="false">:      </string>
    <string name="createFirstPet">Add my first pet</string>
    <string name="takeCareOfExistingPet">Take care of a pet</string>
    <string name="timeToMakeAPetDescriprtion">It\'s time to add a pet to Petland</string>
    <string name="timeToMakeAPetSubtitle">You can add a pet you own or get invited to take care of a pet that\'s already registered in Petland</string>
    <string name="test">test</string>
    <string name="instructionstocreateapetdescriprtion">Fill the next form with the basic information about your pet</string>
    <string name="temporalAquiVaLaFoto">You can add a photo of your pet now or do it later from the pet profile</string>
    <string name="tapToAddPhoto">taptoAddPhoto</string>
    <string name="petName">Pet\'s name</string>
    <string name="petsbirthday">Pet\'s birthday</string>
    <string name="chip">Chip</string>
    <string name="createNewPet">Register my pet</string>
    <string name="cancel">Cancel</string>
    <string name="profileCreatedCorrectly">Profile created correctly</string>
    <string name="petCaregivers"> Caregivers</string>
    <string name="owner">Owner</string>
    <string name="instructionstoeditprofiledescriprtion">Edit any of the following fields and save changes to update your profile information</string>
    <string name="delete">DELETE</string>
    <string name="cancelAlertTitle">Are you sure you want to cancel the unsaved changes?</string>
    <string name="cancelAlertMessage">Any unsaved changes wil be lost</string>
    <string name="ok">Ok</string>
    <string name="confirmationAlertTitle">Are you sure you want to save the changes?</string>
    <string name="confirmationAlertMessage">The changes will be saved and the profile will be modified</string>
    <string name="edit_image">Choose image</string>
    <string name="reset_image">Use default image</string>
    <string name="crop_error">Could not bet cropped correctly, please try again</string>
    <string name="delete_account_message">Are you sure you want to delete the account? All pets and saved data will be deleted</string>
    <string name="delete_account">Delete account</string>
    <string name="racetype">Multiple race</string>
    <string name="race">Race</string>
    <string name="petNameNeeded">The pet must have a name</string>
    <string name="chipNumber">The pet must have a chip number</string>
    <string name="instructionsToChangePasswordDescription">Type and confirm your new password for this account</string>
    <string name="pet_deletion_alert_title">Are you sure you want to delete this pet?</string>
    <string name="pet_deletion_alert_message">The deletion of a pet includes the deletion of all its infromation</string>
    <string name="errorconnect">Connection error</string>
    <string name="noconnection">There\'s no connection with the server</string>
    <string name="vaccine">Vaccine</string>
    <string name="unknown_id">Unknown Value</string>
    <string name="medicine">Medicine</string>
    <string name="food">Food</string>
    <string name="hygiene">Hygiene</string>
    <string name="measurement">Measurement</string>
    <string name="food_feed">Feed</string>
    <string name="food_meat">Meat</string>
    <string name="food_tooth_bars">Tooth bars</string>
    <string name="food_water">Water</string>
    <string name="hygiene_bath">Bath</string>
    <string name="hygiene_deworm">Deworm</string>
    <string name="hygiene_haircut">Haircut</string>
    <string name="hygiene_nails">Nails</string>
    <string name="event_date">Event date</string>
    <string name="default_event_time" translatable="false">08:00</string>
    <string name="event_food_dosage">Dosage</string>
    <string name="event_extra_info">Additional information</string>
    <string name="event_type">Type:</string>
    <string name="event_measurement_weight">Weight</string>
    <string name="event_measurement_height">Height</string>
    <string name="event_medicine_dosage">Dosage</string>
    <string name="recurrent_event_check">It\'s a recurrent event</string>
    <string name="repeat_every">Repeats every</string>
    <string name="days">days</string>
    <string name="event_end_date">Finalization date</string>
    <string name="event_until_date">Until an specific date</string>
    <string name="create_event">Create event</string>
    <string name="date_needed">Date needed</string>
    <string name="content_mandatory">Mandatory content</string>
    <string name="samerace">Equal races</string>
    <string name="instructionsInvitationsdescription">You have received the following invitations, you can accept or deny them</string>
    <string name="invitedBy">Invited by the Owner:</string>
    <string name="review_invites">Review invites</string>
    <string name="done">Completed</string>
    <string name="event_deletion_alert_title">Are you sure you want to delete this event?</string>
    <string name="noPendingInvites">You have no pending invites at the moment</string>
    <string name="title_activity_maps_ubication">Map</string>
    <string name="title_activity_maps">Map</string>
    <string name="paseando">Paseando...</string>
    <string name="finalizar_paseo">Terminar</string>
    <string name="distancia_paseada">Distancia paseada:</string>
    <string name="tiempo_transcurrido">Tiempo transcurrido:</string>
    <string name="mins">mins</string>
    <string name="end_walk">Are you sure you want to End the walk?</string>
    <string name="end_walk_message">When ending a walk the distance, path and duration will be saved in the walks tab</string>
    <string name="walkpet">Select the animals you want to walk with</string>
    <string name="duration">Duration</string>
    <string name="distance">Distance</string>
    <string name="paseador">Walker</string>
    <string name="done_on">Completed on</string>
    <string name="needed">Needed</string>
    <string name="event_completion_dialog">Did you complete the event on the expected date?</string>
    <string name="yes">Yes</string>
    <string name="no_choose_date">No, choose date</string>
    <string name="type_of_food_hint">Type of food:</string>
    <string name="quantity_hint">Quantity:</string>
    <string name="type_of_hygiene_hint">Hygiene type:</string>
    <string name="filter_by">Filter by:</string>
    <string name="newest_first">Newest first</string>
    <string name="oldest_first">Oldest first</string>
    <string name="noWalks">There aren\'t any upcoming walks</string>
    <string name="walks">"Upcoming walk: "</string>
    <string name="noEvents">There are no upcoming events for this pet</string>
    <string name="add_caregiver">Add caregiver</string>
    <string name="events_header">Upcoming events:</string>
    <string name="viewProfile">View Profile</string>
    <string name="listNotNull">List cannot be null</string>
    <string name="assigned_to">Assigned to</string>
    <string name="tipo_de_evento">Type of event</string>
    <string name="assigned_to_no_one">No one</string>
    <string name="error_caregivers_updated">Error: Caregivers have been updated</string>
    <string name="error_caregiver_deleted">Error: The previous assigned caregiver is no longer eligible</string>
    <string name="distance_value">"Distance: "</string>
    <string name="time">"Time: "</string>
    <string name="view_map">View Map</string>
    <string name="datos_del_paseo">Walk data</string>
    <string name="noAssignedToEvent">Do not assign to any event</string>
    <string name="eventPet">one of this events?</string>
    <string name="walkev">"Is this walk from "</string>
    <string name="hairdresser">Hairdresser</string>
    <string name="veterinary">Veterinary</string>
    <string name="park">Park</string>
    <string name="restaurant">Restaurant</string>
    <string name="other">Other</string>
    <string name="filter_location_text">Show:</string>
    <string name="all">All</string>
    <string name="reviews">Reviews</string>
    <string name="notsaved">Changes not saved</string>
    <string name="dialogReview">Are you sure you don\'t want to save your reviews changes?</string>
    <string name="add_review">Add Review</string>
    <string name="save_review">Save Review</string>
    <string name="modify_review">Modify your review:</string>
    <string name="modify_comment">\"Modify your comment: \"</string>
    <string name="add_comment">Add a comment:</string>
    <string name="rate_the_location">Rate the location:</string>
    <string name="no_vaccines_are_scheduled">No vaccines are scheduled</string>
    <string name="no_medications_are_scheduled">No medications are scheduled</string>
    <string name="upcoming_medications">Upcoming medications:</string>
    <string name="upcoming_vaccines">Upcoming vaccines:</string>
    <string name="look_for_a_new_vet">Look for a new vet</string>
    <string name="look_for_a_vet_near_you">Look for a vet near you</string>
    <string name="see_medical_history">See medical history</string>
    <string name="medical_history">Medical history</string>
    <string name="medicines_supplied">Medications supplied:</string>
    <string name="vaccines_supplied">Vaccines supplied:</string>
    <string name="invi_exists">Invitation already exists</string>
    <string name="invi_sent">Invitation sent</string>
    <string name="invitation_caregiver">" Accepted caregiver invitations"</string>
    <string name="new_caregiver">New caregiver invitations</string>
    <string name="events_pet">You have pet events for today</string>
    <string name="have_event">"have an event at "</string>
    <string name="number_invitations_caregiver">caregiver invitations accepted</string>
</resources>