<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditProfileFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <EditText
            android:id="@+id/editTextUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="76dp"
            android:layout_marginEnd="50dp"
            android:background="@drawable/edittext_without_corners"
            android:ems="10"
            android:hint="@string/username"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:textColor="#BDBDBD"
            android:textColorHint="#BBC1CE"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonVolver" />

        <EditText
            android:id="@+id/editTextEmail"
            android:layout_width="match_parent"
            android:adjustViewBounds="true"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="50dp"
            android:background="@drawable/edittext_without_corners"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:scaleType="fitXY"
            android:textColor="#BDBDBD"
            android:textColorHint="#BBC1CE"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextUsername" />

        <EditText
            android:id="@+id/editTextName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="28dp"
            android:adjustViewBounds="true"
            android:layout_marginEnd="50dp"
            android:background="@drawable/edittext_without_corners"
            android:ems="10"
            android:textColorHint="#BBC1CE"
            android:hint="@string/name"
            android:textColor="#9E9E9E"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/editTextEmail"
            android:padding="10dp"
            android:scaleType="fitXY"
            android:cropToPadding="false"/>

        <EditText
            android:id="@+id/editTextBirthday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:adjustViewBounds="true"
            android:layout_marginTop="28dp"
            android:layout_marginEnd="50dp"
            android:background="@drawable/edittext_without_corners"
            android:ems="10"
            android:textColorHint="#BBC1CE"
            android:hint="@string/birthday"
            android:inputType="text|date"
            android:textColor="#9E9E9E"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextName"
            android:padding="10dp"
            android:cropToPadding="false"
            />

        <Button
            android:id="@+id/buttonGuardarCambios"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="50dp"
            android:background="@drawable/button_without_corners"
            android:backgroundTint="#00C4CC"
            android:cropToPadding="false"
            android:onClick="edit"
            android:text="@string/saveChanges"
            android:textAllCaps="false"
            android:textColor="#FFFFFF"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonCambiarpassword"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/buttonVolver"
            android:layout_width="83dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:background="@drawable/button_without_corners"
            android:backgroundTint="#00C4CC"
            android:cropToPadding="false"
            android:onClick="volver"
            android:text="@string/goBack"
            android:textAllCaps="false"
            android:textColor="#FFFFFF"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.235"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/buttonCambiarpassword"
            android:layout_width="206dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:adjustViewBounds="true"
            android:background="@drawable/button_without_corners"
            android:backgroundTint="#00C4CC"
            android:onClick="changepassword"
            android:text="@string/changePassword"
            android:textAllCaps="false"
            android:textColor="#FFFFFF"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextBirthday"
            app:layout_constraintVertical_bias="0.046" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>