<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    tools:context=".image.ImageActivity">

    <com.mikhaellopez.circularimageview.CircularImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:adjustViewBounds="false"
        android:scaleType="centerCrop"
        app:civ_border_width="0dp"
        app:civ_shadow_gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/animal_paw" />

    <Button
        android:id="@+id/editImage"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/button_without_corners"
        android:backgroundTint="#00C4CC"
        android:padding="8dp"
        android:text="@string/edit_image"
        app:layout_constraintBottom_toTopOf="@+id/resetImage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/resetImage"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/button_without_corners"
        android:backgroundTint="#00C4CC"
        android:padding="8dp"
        android:text="@string/reset_image"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/button_without_corners"
        android:backgroundTint="#00C4CC"
        android:text="@string/goBack"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>